feat: add alertmanagerLogEvent struct

--- a/exporter/alertmanagerexporter/metadata.yaml
+++ b/exporter/alertmanagerexporter/metadata.yaml
@@ -3,7 +3,7 @@ type: alertmanager
 status:
   class: exporter
   stability:
-    development: [traces]
+    development: [traces,logs]
   distributions: []
   codeowners:
     active: [sokoide, mcube8]
